--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="X-Frame-Bypass: Web Component extending IFrame to bypass X-Frame-Options: deny/sameorigin">
-	<title>X-Frame-Bypass Web Component Demo</title>
+	<title>Lex's Magic Click Machine</title>
+
+	<script>
+		function custom(){
+			var link = 
+			document.getElementById('findme').contentWindow.document.querySelectorAll("a[href*='featurestore.org']")[0];
+				link.target = "";
+				link.click()
+}
+
+	</script>
 	<style>
 		html, body {
 			margin: 0;
@@ -28,7 +38,6 @@
 	<script src="x-frame-bypass.js" type="module"></script>
 </head>
 <body>
-	<iframe is="x-frame-bypass" src="https://news.ycombinator.com/"></iframe>
-	<a href="https://github.com/niutech/x-frame-bypass"><img src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+	<iframe is="x-frame-bypass" id="findme" onload="custom()" src="https://www.google.com/search?q=feature store"></iframe>
 </body>
 </html>
