--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 		function custom(){
 			var link = 
 			document.getElementById('findme').contentWindow.document.querySelectorAll("a[href*='featurestore.org']")[0];
-				link.target = "";
-				link.click()
+			console.log(link); //show if the queryselector worked
+//		link.target = "";
+//		link.click()
 }
 
 	</script>
