--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		function custom(){
 			var link = 
-			document.getElementById('findme').contentWindow.document.querySelectorAll("a[href*='serverless-ml.org']")[0];
+			document.getElementById('findme').contentWindow.document.querySelectorAll("a[href*='nethence.com']")[0];
 //			console.log(link); //show if the queryselector worked
 		link.target = "";
 		link.click()
