--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
 	<title>Lex's Magic Machine</title>
 
 	<script>
-
-
 		function custom(){
 			var link = 
-			document.getElementById('findme').contentWindow.document.querySelectorAll("a[href*='nethence.com']")[0];
-//			console.log(link); //show if the queryselector worked
-		link.target = "";
-		link.click()
+			document.getElementById('findme').contentWindow.document.querySelectorAll("a[href*='for.ai']")[0];
+			console.log(link); //show if the queryselector worked
+			link.target = "";
+			link.click()
 }
 
 	</script>
